Feature: some design added, fonts, image ...

--- a/style.css
+++ b/style.css
@@ -1,15 +1,14 @@
-table {
-    border-collapse: collapse;
-    margin: 15px 0;
-}
+
 
 td, th {
     border: 1px solid black;
     padding: 5px 10px;
 }
 
-h1, h2 {
+h1{
     text-align: center;
+    font-family: 'Pacifico', cursive;
+
 }
 .col-6 * {
     width: 100%;
@@ -27,12 +26,14 @@ button {
     padding: 0;
 }
 
-div>h3, p {
+div>h3, p, h2  {
     display: inline;
+    font-family: 'Amaranth', sans-serif;
+
 }
 
 div>p {
-    color: lightslategray;
+    color: #a8803f;
 }
 
 .coffee {
@@ -43,6 +44,44 @@ div>p {
 
 .container{
     max-width: 70%;
-    margin-top: 100px;
+    margin-top: 50px;
+    background-color: white;
+    margin-bottom: 50px;
+    border-radius: 12px;
 }
+
+body{
+
+    background-color: bisque;
+
+}
+
+.fondo{
+    background-image: url("img/coffee_vector.png");
+    width: 100%;
+    height: 200px;
+    border-top-left-radius: 12px;
+    border-top-right-radius: 12px;
+}
+
+
+.pale{
+    opacity: 0.9;
+    margin:auto;
+    text-decoration-style: double;
+}
+
+.boton{
+
+    background-color: #a8803f;
+    color: white;
+    border: none;
+
+}
+
+#add-coffee, #newName{
+    border: #a8803f solid 1px;
+
+}
+
 
